--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -1,13 +1,14 @@
-<table class="table table-hover" *ngIf="coins!= 0">
-  <thead>
-  <tr>
-      <td>Coin Name</td>
-      <td>Coin Price</td>
-  </tr>
-  </thead>
-  <tbody>
-      <tr *ngFor="let coin of coins | async">
-          <td>{{ coin.name }}</td>
-          <td>{{ coin.price }}</td>
-      </tr>
-  </tbody>
+<table class="table table-hover">
+    <thead>
+        <tr>
+            <td>Coin Name</td>
+            <td>Coin Price</td>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let coin of coins">
+            <td>{{ coin.name }}</td>
+            <td>{{ coin.price }}</td>
+            <td><button class="btn btn-primary" (click)="removeCoin(coin)">Remove</button></td>
+        </tr>
+    </tbody>
